Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> sentence_list
Rule 2     sentence_list -> sentence_list single_sentence
Rule 3     sentence_list -> single_sentence
Rule 4     single_sentence -> declaration NEW_LINE
Rule 5     single_sentence -> assignment NEW_LINE
Rule 6     single_sentence -> if NEW_LINE
Rule 7     single_sentence -> while NEW_LINE
Rule 8     single_sentence -> proc NEW_LINE
Rule 9     single_sentence -> proc_call NEW_LINE
Rule 10    single_sentence -> robot_action NEW_LINE
Rule 11    single_sentence -> inc NEW_LINE
Rule 12    single_sentence -> dec NEW_LINE
Rule 13    single_sentence -> logical NEW_LINE
Rule 14    declaration -> type VARIABLE EQUAL expression
Rule 15    declaration -> MAP VARIABLE
Rule 16    type -> int
Rule 17    type -> boolean
Rule 18    int -> INT
Rule 19    int -> CINT
Rule 20    boolean -> BOOLEAN
Rule 21    boolean -> CBOOLEAN
Rule 22    assignment -> VARIABLE ASSIGN expression
Rule 23    if -> IF logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
Rule 24    if -> IF logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET ELSE LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
Rule 25    inc -> INC expression expression
Rule 26    dec -> DEC expression expression
Rule 27    while -> WHILE logical NEW_LINE DO single_sentence
Rule 28    while -> WHILE logical NEW_LINE DO LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
Rule 29    proc -> PROC VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
Rule 30    proc_args -> VARIABLE
Rule 31    proc_args -> proc_args VARIABLE
Rule 32    proc_call -> VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET
Rule 33    robot_action -> STEP
Rule 34    robot_action -> BACK
Rule 35    robot_action -> RIGHT
Rule 36    robot_action -> LEFT
Rule 37    robot_action -> LOOK
Rule 38    map_action -> BAR LEFT_SQUARE_BRACKET VARIABLE VARIABLE VARIABLE VARIABLE RIGHT_SQUARE_BRACKET
Rule 39    map_action -> EMP LEFT_SQUARE_BRACKET VARIABLE VARIABLE VARIABLE VARIABLE RIGHT_SQUARE_BRACKET
Rule 40    map_action -> SET LEFT_SQUARE_BRACKET VARIABLE VARIABLE VARIABLE VARIABLE RIGHT_SQUARE_BRACKET
Rule 41    map_action -> CLR LEFT_SQUARE_BRACKET VARIABLE VARIABLE VARIABLE VARIABLE RIGHT_SQUARE_BRACKET
Rule 42    expression -> math_expression
Rule 43    expression -> VARIABLE
Rule 44    expression -> logical
Rule 45    expression -> robot_action
Rule 46    logical -> not
Rule 47    logical -> or
Rule 48    logical -> lt
Rule 49    logical -> gt
Rule 50    logical -> TRUE
Rule 51    logical -> FALSE
Rule 52    not -> NOT logical
Rule 53    not -> NOT proc_call
Rule 54    or -> OR or_arg or_arg
Rule 55    or_arg -> logical
Rule 56    or_arg -> proc_call
Rule 57    lt -> LT math_expression math_expression
Rule 58    gt -> GT math_expression math_expression
Rule 59    math_expression -> inc
Rule 60    math_expression -> dec
Rule 61    math_expression -> INT_DECIMAL

Terminals, with rules where they appear

ASSIGN               : 22
BACK                 : 34
BAR                  : 38
BOOLEAN              : 20
CBOOLEAN             : 21
CINT                 : 19
CLR                  : 41
DEC                  : 26
DO                   : 27 28
ELSE                 : 24
EMP                  : 39
EQUAL                : 14
FALSE                : 51
GT                   : 58
IF                   : 23 24
INC                  : 25
INT                  : 18
INT_DECIMAL          : 61
LEFT                 : 36
LEFT_BRACKET         : 23 24 24 28 29
LEFT_SQUARE_BRACKET  : 29 32 38 39 40 41
LOOK                 : 37
LT                   : 57
MAP                  : 15
NEW_LINE             : 4 5 6 7 8 9 10 11 12 13 23 24 24 27 28 28 29
NOT                  : 52 53
OR                   : 54
PROC                 : 29
RIGHT                : 35
RIGHT_BRACKET        : 23 24 24 28 29
RIGHT_SQUARE_BRACKET : 29 32 38 39 40 41
SET                  : 40
STEP                 : 33
TRUE                 : 50
VARIABLE             : 14 15 22 29 30 31 32 38 38 38 38 39 39 39 39 40 40 40 40 41 41 41 41 43
WHILE                : 27 28
error                : 

Nonterminals, with rules where they appear

assignment           : 5
boolean              : 17
dec                  : 12 60
declaration          : 4
expression           : 14 22 25 25 26 26
gt                   : 49
if                   : 6
inc                  : 11 59
int                  : 16
logical              : 13 23 24 27 28 44 52 55
lt                   : 48
map_action           : 
math_expression      : 42 57 57 58 58
not                  : 46
or                   : 47
or_arg               : 54 54
proc                 : 8
proc_args            : 29 31 32
proc_call            : 9 53 56
program              : 0
robot_action         : 10 45
sentence_list        : 1 2 23 24 24 28 29
single_sentence      : 2 3 27
type                 : 14
while                : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sentence_list
    (2) sentence_list -> . sentence_list single_sentence
    (3) sentence_list -> . single_sentence
    (4) single_sentence -> . declaration NEW_LINE
    (5) single_sentence -> . assignment NEW_LINE
    (6) single_sentence -> . if NEW_LINE
    (7) single_sentence -> . while NEW_LINE
    (8) single_sentence -> . proc NEW_LINE
    (9) single_sentence -> . proc_call NEW_LINE
    (10) single_sentence -> . robot_action NEW_LINE
    (11) single_sentence -> . inc NEW_LINE
    (12) single_sentence -> . dec NEW_LINE
    (13) single_sentence -> . logical NEW_LINE
    (14) declaration -> . type VARIABLE EQUAL expression
    (15) declaration -> . MAP VARIABLE
    (22) assignment -> . VARIABLE ASSIGN expression
    (23) if -> . IF logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (24) if -> . IF logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET ELSE LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (27) while -> . WHILE logical NEW_LINE DO single_sentence
    (28) while -> . WHILE logical NEW_LINE DO LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (29) proc -> . PROC VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (32) proc_call -> . VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET
    (33) robot_action -> . STEP
    (34) robot_action -> . BACK
    (35) robot_action -> . RIGHT
    (36) robot_action -> . LEFT
    (37) robot_action -> . LOOK
    (25) inc -> . INC expression expression
    (26) dec -> . DEC expression expression
    (46) logical -> . not
    (47) logical -> . or
    (48) logical -> . lt
    (49) logical -> . gt
    (50) logical -> . TRUE
    (51) logical -> . FALSE
    (16) type -> . int
    (17) type -> . boolean
    (52) not -> . NOT logical
    (53) not -> . NOT proc_call
    (54) or -> . OR or_arg or_arg
    (57) lt -> . LT math_expression math_expression
    (58) gt -> . GT math_expression math_expression
    (18) int -> . INT
    (19) int -> . CINT
    (20) boolean -> . BOOLEAN
    (21) boolean -> . CBOOLEAN

    MAP             shift and go to state 16
    VARIABLE        shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    PROC            shift and go to state 19
    STEP            shift and go to state 20
    BACK            shift and go to state 21
    RIGHT           shift and go to state 22
    LEFT            shift and go to state 23
    LOOK            shift and go to state 24
    INC             shift and go to state 25
    DEC             shift and go to state 26
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NOT             shift and go to state 35
    OR              shift and go to state 36
    LT              shift and go to state 37
    GT              shift and go to state 38
    INT             shift and go to state 39
    CINT            shift and go to state 40
    BOOLEAN         shift and go to state 41
    CBOOLEAN        shift and go to state 42

    program                        shift and go to state 1
    sentence_list                  shift and go to state 2
    single_sentence                shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    proc                           shift and go to state 8
    proc_call                      shift and go to state 9
    robot_action                   shift and go to state 10
    inc                            shift and go to state 11
    dec                            shift and go to state 12
    logical                        shift and go to state 13
    type                           shift and go to state 14
    not                            shift and go to state 27
    or                             shift and go to state 28
    lt                             shift and go to state 29
    gt                             shift and go to state 30
    int                            shift and go to state 33
    boolean                        shift and go to state 34

state 1

    (0) S' -> program .



state 2

    (1) program -> sentence_list .
    (2) sentence_list -> sentence_list . single_sentence
    (4) single_sentence -> . declaration NEW_LINE
    (5) single_sentence -> . assignment NEW_LINE
    (6) single_sentence -> . if NEW_LINE
    (7) single_sentence -> . while NEW_LINE
    (8) single_sentence -> . proc NEW_LINE
    (9) single_sentence -> . proc_call NEW_LINE
    (10) single_sentence -> . robot_action NEW_LINE
    (11) single_sentence -> . inc NEW_LINE
    (12) single_sentence -> . dec NEW_LINE
    (13) single_sentence -> . logical NEW_LINE
    (14) declaration -> . type VARIABLE EQUAL expression
    (15) declaration -> . MAP VARIABLE
    (22) assignment -> . VARIABLE ASSIGN expression
    (23) if -> . IF logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (24) if -> . IF logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET ELSE LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (27) while -> . WHILE logical NEW_LINE DO single_sentence
    (28) while -> . WHILE logical NEW_LINE DO LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (29) proc -> . PROC VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (32) proc_call -> . VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET
    (33) robot_action -> . STEP
    (34) robot_action -> . BACK
    (35) robot_action -> . RIGHT
    (36) robot_action -> . LEFT
    (37) robot_action -> . LOOK
    (25) inc -> . INC expression expression
    (26) dec -> . DEC expression expression
    (46) logical -> . not
    (47) logical -> . or
    (48) logical -> . lt
    (49) logical -> . gt
    (50) logical -> . TRUE
    (51) logical -> . FALSE
    (16) type -> . int
    (17) type -> . boolean
    (52) not -> . NOT logical
    (53) not -> . NOT proc_call
    (54) or -> . OR or_arg or_arg
    (57) lt -> . LT math_expression math_expression
    (58) gt -> . GT math_expression math_expression
    (18) int -> . INT
    (19) int -> . CINT
    (20) boolean -> . BOOLEAN
    (21) boolean -> . CBOOLEAN

    $end            reduce using rule 1 (program -> sentence_list .)
    MAP             shift and go to state 16
    VARIABLE        shift and go to state 15
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    PROC            shift and go to state 19
    STEP            shift and go to state 20
    BACK            shift and go to state 21
    RIGHT           shift and go to state 22
    LEFT            shift and go to state 23
    LOOK            shift and go to state 24
    INC             shift and go to state 25
    DEC             shift and go to state 26
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NOT             shift and go to state 35
    OR              shift and go to state 36
    LT              shift and go to state 37
    GT              shift and go to state 38
    INT             shift and go to state 39
    CINT            shift and go to state 40
    BOOLEAN         shift and go to state 41
    CBOOLEAN        shift and go to state 42

    single_sentence                shift and go to state 43
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    proc                           shift and go to state 8
    proc_call                      shift and go to state 9
    robot_action                   shift and go to state 10
    inc                            shift and go to state 11
    dec                            shift and go to state 12
    logical                        shift and go to state 13
    type                           shift and go to state 14
    not                            shift and go to state 27
    or                             shift and go to state 28
    lt                             shift and go to state 29
    gt                             shift and go to state 30
    int                            shift and go to state 33
    boolean                        shift and go to state 34

state 3

    (3) sentence_list -> single_sentence .

    MAP             reduce using rule 3 (sentence_list -> single_sentence .)
    VARIABLE        reduce using rule 3 (sentence_list -> single_sentence .)
    IF              reduce using rule 3 (sentence_list -> single_sentence .)
    WHILE           reduce using rule 3 (sentence_list -> single_sentence .)
    PROC            reduce using rule 3 (sentence_list -> single_sentence .)
    STEP            reduce using rule 3 (sentence_list -> single_sentence .)
    BACK            reduce using rule 3 (sentence_list -> single_sentence .)
    RIGHT           reduce using rule 3 (sentence_list -> single_sentence .)
    LEFT            reduce using rule 3 (sentence_list -> single_sentence .)
    LOOK            reduce using rule 3 (sentence_list -> single_sentence .)
    INC             reduce using rule 3 (sentence_list -> single_sentence .)
    DEC             reduce using rule 3 (sentence_list -> single_sentence .)
    TRUE            reduce using rule 3 (sentence_list -> single_sentence .)
    FALSE           reduce using rule 3 (sentence_list -> single_sentence .)
    NOT             reduce using rule 3 (sentence_list -> single_sentence .)
    OR              reduce using rule 3 (sentence_list -> single_sentence .)
    LT              reduce using rule 3 (sentence_list -> single_sentence .)
    GT              reduce using rule 3 (sentence_list -> single_sentence .)
    INT             reduce using rule 3 (sentence_list -> single_sentence .)
    CINT            reduce using rule 3 (sentence_list -> single_sentence .)
    BOOLEAN         reduce using rule 3 (sentence_list -> single_sentence .)
    CBOOLEAN        reduce using rule 3 (sentence_list -> single_sentence .)
    $end            reduce using rule 3 (sentence_list -> single_sentence .)
    RIGHT_BRACKET   reduce using rule 3 (sentence_list -> single_sentence .)


state 4

    (4) single_sentence -> declaration . NEW_LINE

    NEW_LINE        shift and go to state 44


state 5

    (5) single_sentence -> assignment . NEW_LINE

    NEW_LINE        shift and go to state 45


state 6

    (6) single_sentence -> if . NEW_LINE

    NEW_LINE        shift and go to state 46


state 7

    (7) single_sentence -> while . NEW_LINE

    NEW_LINE        shift and go to state 47


state 8

    (8) single_sentence -> proc . NEW_LINE

    NEW_LINE        shift and go to state 48


state 9

    (9) single_sentence -> proc_call . NEW_LINE

    NEW_LINE        shift and go to state 49


state 10

    (10) single_sentence -> robot_action . NEW_LINE

    NEW_LINE        shift and go to state 50


state 11

    (11) single_sentence -> inc . NEW_LINE

    NEW_LINE        shift and go to state 51


state 12

    (12) single_sentence -> dec . NEW_LINE

    NEW_LINE        shift and go to state 52


state 13

    (13) single_sentence -> logical . NEW_LINE

    NEW_LINE        shift and go to state 53


state 14

    (14) declaration -> type . VARIABLE EQUAL expression

    VARIABLE        shift and go to state 54


state 15

    (22) assignment -> VARIABLE . ASSIGN expression
    (32) proc_call -> VARIABLE . LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET

    ASSIGN          shift and go to state 55
    LEFT_SQUARE_BRACKET shift and go to state 56


state 16

    (15) declaration -> MAP . VARIABLE

    VARIABLE        shift and go to state 57


state 17

    (23) if -> IF . logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (24) if -> IF . logical LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET ELSE LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (46) logical -> . not
    (47) logical -> . or
    (48) logical -> . lt
    (49) logical -> . gt
    (50) logical -> . TRUE
    (51) logical -> . FALSE
    (52) not -> . NOT logical
    (53) not -> . NOT proc_call
    (54) or -> . OR or_arg or_arg
    (57) lt -> . LT math_expression math_expression
    (58) gt -> . GT math_expression math_expression

    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NOT             shift and go to state 35
    OR              shift and go to state 36
    LT              shift and go to state 37
    GT              shift and go to state 38

    logical                        shift and go to state 58
    not                            shift and go to state 27
    or                             shift and go to state 28
    lt                             shift and go to state 29
    gt                             shift and go to state 30

state 18

    (27) while -> WHILE . logical NEW_LINE DO single_sentence
    (28) while -> WHILE . logical NEW_LINE DO LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET
    (46) logical -> . not
    (47) logical -> . or
    (48) logical -> . lt
    (49) logical -> . gt
    (50) logical -> . TRUE
    (51) logical -> . FALSE
    (52) not -> . NOT logical
    (53) not -> . NOT proc_call
    (54) or -> . OR or_arg or_arg
    (57) lt -> . LT math_expression math_expression
    (58) gt -> . GT math_expression math_expression

    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    NOT             shift and go to state 35
    OR              shift and go to state 36
    LT              shift and go to state 37
    GT              shift and go to state 38

    logical                        shift and go to state 59
    not                            shift and go to state 27
    or                             shift and go to state 28
    lt                             shift and go to state 29
    gt                             shift and go to state 30

state 19

    (29) proc -> PROC . VARIABLE LEFT_SQUARE_BRACKET proc_args RIGHT_SQUARE_BRACKET LEFT_BRACKET NEW_LINE sentence_list RIGHT_BRACKET

    VARIABLE        shift and go to state 60


state 20

    (33) robot_action -> STEP .

    NEW_LINE        reduce using rule 33 (robot_action -> STEP .)
    VARIABLE        reduce using rule 33 (robot_action -> STEP .)
    INT_DECIMAL     reduce using rule 33 (robot_action -> STEP .)
    TRUE            reduce using rule 33 (robot_action -> STEP .)
    FALSE           reduce using rule 33 (robot_action -> STEP .)
    STEP            reduce using rule 33 (robot_action -> STEP .)
    BACK            reduce using rule 33 (robot_action -> STEP .)
    RIGHT           reduce using rule 33 (robot_action -> STEP .)
    LEFT            reduce using rule 33 (robot_action -> STEP .)
    LOOK            reduce using rule 33 (robot_action -> STEP .)
    INC             reduce using rule 33 (robot_action -> STEP .)
    DEC             reduce using rule 33 (robot_action -> STEP .)
    NOT             reduce using rule 33 (robot_action -> STEP .)
    OR              reduce using rule 33 (robot_action -> STEP .)
    LT              reduce using rule 33 (robot_action -> STEP .)
    GT              reduce using rule 33 (robot_action -> STEP .)
    LEFT_BRACKET    reduce using rule 33 (robot_action -> STEP .)


state 21

    (34) robot_action -> BACK .

    NEW_LINE        reduce using rule 34 (robot_action -> BACK .)
    VARIABLE        reduce using rule 34 (robot_action -> BACK .)
    INT_DECIMAL     reduce using rule 34 (robot_action -> BACK .)
    TRUE            reduce using rule 34 (robot_action -> BACK .)
    FALSE           reduce using rule 34 (robot_action -> BACK .)
    STEP            reduce using rule 34 (robot_action -> BACK .)
    BACK            reduce using rule 34 (robot_action -> BACK .)
    RIGHT           reduce using rule 34 (robot_action -> BACK .)
    LEFT            reduce using rule 34 (robot_action -> BACK .)
    LOOK            reduce using rule 34 (robot_action -> BACK .)
    INC             reduce using rule 34 (robot_action -> BACK .)
    DEC             reduce using rule 34 (robot_action -> BACK .)
    NOT             reduce using rule 34 (robot_action -> BACK .)
    OR              reduce using rule 34 (robot_action -> BACK .)
    LT              reduce using rule 34 (robot_action -> BACK .)
    GT              reduce using rule 34 (robot_action -> BACK .)
    LEFT_BRACKET    reduce using rule 34 (robot_action -> BACK .)


state 22

    (35) robot_action -> RIGHT .

    NEW_LINE        reduce using rule 35 (robot_action -> RIGHT .)
    VARIABLE        reduce using rule 35 (robot_action -> RIGHT .)
    INT_DECIMAL     reduce using rule 35 (robot_action -> RIGHT .)
    TRUE            reduce using rule 35 (robot_action -> RIGHT .)
    FALSE           reduce using rule 35 (robot_action -> RIGHT .)
    STEP            reduce using rule 35 (robot_action -> RIGHT .)
    BACK            reduce using rule 35 (robot_action -> RIGHT .)
    RIGHT           reduce using rule 35 (robot_action -> RIGHT .)
    LEFT            reduce using rule 35 (robot_action -> RIGHT .)
    LOOK            reduce using rule 35 (robot_action -> RIGHT .)
    INC             reduce using rule 35 (robot_action -> RIGHT .)
    DEC             reduce using rule 35 (robot_action -> RIGHT .)
    NOT             reduce using rule 35 (robot_action -> RIGHT .)
    OR              reduce using rule 35 (robot_action -> RIGHT .)
    LT              reduce using rule 35 (robot_action -> RIGHT .)
    GT              reduce using rule 35 (robot_action -> RIGHT .)
    LEFT_BRACKET    reduce using rule 35 (robot_action -> RIGHT .)


state 23

    (36) robot_action -> LEFT .
